# Glyph

./: .gitignore  Cargo.toml  GLYPH_CHANGELOG.md  README.md  WINDOWS_BUILD_GUIDE.md  better_text_editor.md  config_schema.json  marketing.md  text_editor_build steps.md
packaging/AppDir/: .DirIcon  AppRun  glyph.desktop
src/: main.rs
src/buffer/: highlighter.rs  mod.rs  piece_table.rs  renderer.rs
ui/: appwindow.slint
