[package]
name = "glyph"
version = "0.2.0"
edition = "2021"

[dependencies]
slint = { version = "1.5", features = ["backend-winit", "renderer-winit-software", "serde"] }
cosmic-text = "0.12"
tiny-skia = "0.11"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
anyhow = "1.0"
copypasta = "0.10"
walkdir = "2.5"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"

[build-dependencies]
slint-build = "1.5"
